--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+sqlalchemy = "*"
+click = "*"
+python-dotenv = "*"
+tabulate = "*"
+pytest = "*"
+faker = "*"
 
 [dev-packages]
+black = "*"
+flake8 = "*"
+pytest = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
